Fix UI rendering
- style.css: Styling horizontal scrollbar
- downloadCard.js: Fix arrow not changing when changing from an existing view

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -276,6 +276,10 @@ input[type="text"]:hover, input[type="checkbox"] + label:hover, input[type="butt
     width: 12px;
 }
 
+::-webkit-scrollbar:horizontal {
+    height: 12px;
+}
+
 ::-webkit-scrollbar-thumb {
     background-clip: padding-box;
     border: var(--border-width) solid transparent;
